# academy-dbt-test

./: .gitignore  Makefile  README.md  dbt_project.yml  profiles.yml  pyproject.toml
models/marts/: bridge_motivo_venda.sql  bridge_motivo_venda.yml  dim_cartao.sql  dim_cartao.yml  dim_clientes.sql  dim_clientes.yml  dim_data.sql  dim_data.yml  dim_localidade.sql  dim_localidade.yml  dim_motivo_venda.sql  dim_motivo_venda.yml  dim_produto.sql  dim_produto.yml  fato_vendas.sql  fato_vendas.yml
models/staging/sap/: sources.yml  stg_sap__cartao_credito.sql  stg_sap__categoria.sql  stg_sap__clientes.sql  stg_sap__detalhes_pedido_venda.sql  stg_sap__endereco.sql  stg_sap__endereco.yml  stg_sap__estado.sql  stg_sap__motivo_venda.sql  stg_sap__pais.sql  stg_sap__pais.yml  stg_sap__pedido_motivo_venda.sql  stg_sap__pedido_venda.sql  stg_sap__pessoas.sql  stg_sap__produto.sql  stg_sap__produto_categoria.sql
seeds/sap_adventure_works/: seed_schema.yml
tests/: vendas_brutas_2011.sql
