[tool.poetry]
name = "academy-dbt-test"
version = "0.1.0"
description = ""
authors = ["danielmschaves <danielmschaves@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^4.0.1"
dbt-core = "^1.8.8"
python-dotenv = "^1.0.1"
duckdb = "^1.1.3"
dbt-bigquery = "^1.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
